tests/fixtures/negative/subscription_used_by_wrong_executor.wrela
// expect: SEM0040: subscription for slot worker used from executor Other
module negative.subscription_used_by_wrong_executor

module machine.x86_64.cpu_state
data SlotIdentity { label: StringLiteral }
data ExecutorSlot { id: U64 }
class ExecutorRegistry { asm fn claim(self, identity: SlotIdentity) -> ExecutorSlot { ret } }

module wrela.lang.core
enum Option<T> {
    None
    Some(value: T)
}

module machine.x86_64.topic
use { Option } from wrela.lang.core
use { ExecutorSlot } from machine.x86_64.cpu_state
data TopicIdentity { label: StringLiteral }
class Topic<T> { identity: TopicIdentity; asm fn subscribe(self, subscriber: ExecutorSlot) -> TopicSubscription<T> { ret } }
class TopicSubscription<T> { subscriber: ExecutorSlot; asm fn try_next(self) -> Option<T> { ret } }

module negative.subscription_used_by_wrong_executor.app
use { ExecutorRegistry, ExecutorSlot, SlotIdentity } from machine.x86_64.cpu_state
use { Topic, TopicIdentity, TopicSubscription } from machine.x86_64.topic

executor Other {
    slot: ExecutorSlot
    input: TopicSubscription<U64>
    start fn run(self) -> never {
        let next = self.input.try_next()
        while true {}
    }
}

image Bad {
    transitions { delegated_hardware -> owned_hardware }
    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware { return hardware.exit_to_owned_hardware() }
    phase owned_hardware(hardware: OwnedHardware) -> never {
        let registry = ExecutorRegistry()
        let worker_slot = registry.claim(identity = SlotIdentity(label = "worker"))
        let other_slot = registry.claim(identity = SlotIdentity(label = "other"))
        let topic = Topic<U64>(identity = TopicIdentity(label = "counter"))
        let sub = topic.subscribe(subscriber = worker_slot)
        let other = Other(slot = other_slot, input = sub)
        while true {}
    }
}
